2013-01-10         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* inplace.1.in, inplace.2.in, inplace.in, inplace1.1.ok, inplace1.2.ok,
	inplace1.ok, inplace2.1.bak.ok, inplace2.1.ok, inplace2.2.bak.ok,
	inplace2.2.ok, inplace2.ok, inplace3.1.bak.ok, inplace3.1.ok,
	inplace3.2.bak.ok, inplace3.2.ok, inplace3.ok: New files.
	* Makefile.am (EXTRA_DIST): Add new files.
	(SHLIB_TESTS): Add inplace1, inplace2, and inplace3.
	(inplace1, inplace2, inplace3): New tests.

2012-12-25         Arnold D. Robbins     <arnold@skeeve.com>

	* assignconst.awk, assignconst.ok: Removed.
	* Makefile.am (EXTRA_DIST): Removed assignconst.awk, assignconst.ok.
	(SHLIB_TESTS): Removed assignconst.
	(assignconst): Removed test.

2012-12-24         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.0.2: Release tar ball made.

2012-12-23         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (paramuninitglobal): New test.
	* paramuninitglobal.awk, paramuninitglobal.ok: New files.
	Thanks to John Haque.

2012-12-19         Arnold D. Robbins     <arnold@skeeve.com>

	* symtab9.awk, symtab9.ok: New files.
	* Makefile.am (EXTRA_DIST): Add new files.
	(symtab9): New test.
	* symtab1.ok, testext.ok: Updated.

2012-12-16         Arnold D. Robbins     <arnold@skeeve.com>

	* symtab7.awk, symtab7.in, symtab7.ok, symtab8.awk, symtab8.in,
	symtab8.ok: New files.
	* Makefile.am (EXTRA_DIST): Add new files.
	(symtab7, symtab8): New tests.
	Thanks to Assaf Gordon <gordon@cshl.edu>.

2012-11-19         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (readdir): Add a 'this could fail message'.
	* readdir.awk: Revise to match simplified behavior of the extension.

2012-11-13         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (GAWK_EXTRA_TESTS): Move to sorted order of tests.

2012-11-12         Arnold D. Robbins     <arnold@skeeve.com>

	* symtab6.ok: Remove PROCINFO.
	* Makefile.am (symtab6): Adjust recipe.
