@@ -15,9 +15,6 @@ TODO
 Minor Cleanups and Code Improvements
 ------------------------------------
 
-	make check with AWKFLAGS=-M has 4 tests that fail but the
-	results are not reflected in make diffout. Look at this.
-
 	API:
 		??? #if !defined(GAWK) && !defined(GAWK_OMIT_CONVENIENCE_MACROS)
 
