@@ -1,3 +1,10 @@
+2013-01-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (rand): Let Gentests create the test.
+	(fmtspcl): Add $(AWKFLAGS).
+	* Gentests: For MPFR tests, add $(AWKFLAGS) on the command lie.
+	* mpfr-rand.ok: Updated.
+
 2013-01-10         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* inplace.1.in, inplace.2.in, inplace.in, inplace1.1.ok, inplace1.2.ok,
